# SmileyBot

./: .gitignore  .replit  Procfile  README.md  __init__.py  amigos.txt  app.py  bot_builder.py  cassino.db  cassino.json  keep_alive.py  pyproject.toml  requeriments.txt  requirements.txt  rodrigo.db  smiley_bot.py  smiley_droid_loco.py  test_droid.py  utils.py
.devcontainer/: devcontainer.json
Cogs/: __init__.py  cassino_cog.py  default_cog.py  falar_cog.py  math_cog.py  reddit_cog.py  rodrigo_cog.py  rpg_cog.py  script_cog.py  tocar_audio_cog.py
backup/: chatsmiley.py  execute.bat  save.py  save2.py
src/cogs/: falar_cog.py  math_cog.py  natal_cog.py  script_cog.py  tocar_audio_cog.py
src/natal/: amigo.py  shuffle_amigos.py
src/natal/ports/: shuffle.py
tests/natal/: amigo_secreto_test.py  fakeshuffle.py
