[tool.poetry]
name = "repl_python3_SmileyDroidLoco"
version = "0.1.0"
description = ""
authors = ["UltraGabriel77 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "^2021.6.6"
chatterbot-voice = "^0.1.5"
discord = "^1.0.1"
flask = "^2.0.1"
gtts = "^2.2.3"
pafy = "^0.5.5"
praw = "^7.3.0"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
