[tool.poetry]
name = "repl_python3_SmileyDroidLoco"
version = "0.1.0"
description = ""
authors = ["UltraGabriel77 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
