[tool.poetry]
name = "smileybot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg = "^1.4"
discord = "^2.0.0"
Flask = "^2.2.2"
gTTS = "^2.2.4"
requests = "^2.28.1"
youtube_dl = "^2021.12.17"
asyncpraw = "^7.5.0"
PyNaCl = "^1.5.0"
static-ffmpeg = "^2.3"
python-ffmpeg = "^1.0.14"
opus-api = "^0.6.2"
discord-ext-music = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
